fixing footer overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -390,26 +390,19 @@ a.active-tab-menu {
 
 .business-footer {
 		margin-top: -5px;
+		background-color: $background-color;
 	ul {
 	  margin:  0;
     padding: 0;
     list-style: none;
 		li {
 			text-align: center;
-			height: 40px;
-			padding: 0;
-			margin: 0;
-			line-height: 40px;
-			&:nth-child(2){
-			border-left: 1px solid black;
-			border-right: 1px solid black;
-			}
-		}
-		.address {
-			line-height: 20px;
+			padding: 5px 0;
+			margin: 5px 0;
+	    background-color: $main-color;
 		}
 		a{
-			color: blue;
+			color: RGBA(65, 136, 224, 1);
 		}
 	}
 }
